# msitrace

./: .editorconfig  CONTRIBUTING.md  Cargo.toml  rust-toolchain.toml
examples/: example.wixproj  example.wxs
src/: ffi.rs  lib.rs
